Fix spacing for Header and Carousel

--- a/src/pages/about/_about.scss
+++ b/src/pages/about/_about.scss
@@ -5,12 +5,16 @@
       padding-top: 6vw;
       text-align: center;
       p {
-        color: grey;
-        font-size: 1.2vw;
-        padding-bottom: 1.5vw;
+        color: #6c757d;
+        font-size: 1.25rem;
+        font-weight: 300;
+        margin-bottom: 1.25rem;
       }
       h1 {
-        font-size: 4vw;
+        font-family: "Inter", sans-serif;
+        font-size: 2.375rem;
+        padding-bottom: 1.875rem;
+        margin-bottom: 0.5rem;
       }
     }
     &-img1 {
