--- a/src/pages/about/components/Carousel/_carousel.scss
+++ b/src/pages/about/components/Carousel/_carousel.scss
@@ -2,6 +2,7 @@
   width: 100vw;
   height: 100vw;
   overflow: hidden;
+  margin-top: 1.5625rem;
 
   &-strip {
     display: flex;
@@ -13,5 +14,6 @@
     align-items: center;
     height: 1rem;
     width: 100vw;
+    margin: 2.8125rem 0;
   }
 }
